# digicollect

./: .env.example  README.md  docker-compose.yml
.github/workflows/: deploy.yml
client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/api/: auth.ts  client.ts  collection.ts  masterCards.ts  types.ts  users.ts
client/src/context/: AuthContext.tsx
client/src/hooks/: useCollection.ts  useMasterCards.ts
client/src/pages/: LandingPage.tsx  (+2 more)
server/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
server/api/: dependencies.py
server/api/v1/: router.py
server/api/v1/routers/: auth.py  collection.py  master_cards.py  users.py
server/api/v1/schemas/: collected_card.py  master_card.py  user.py
server/application/: exceptions.py
server/application/services/: collected_card_service.py  master_card_service.py  user_service.py
server/core/: config.py  security.py
server/domain/: exceptions.py  unit_of_work.py  value_objects.py
server/domain/entities/: __init__.py  collected_card.py  master_card.py  user.py
server/domain/repositories/: __init__.py  collected_card_repository.py  master_card_repository.py  user_repository.py
server/infrastructure/: unit_of_work.py
server/infrastructure/database/: __init__.py  base.py
server/infrastructure/models/: __init__.py  collected_card.py  master_card.py  user.py
server/infrastructure/repositories/: __init__.py  collected_card.py  master_card.py  user.py
server/tests/: conftest.py  test_fuzz.py
(+7 files in other folders)
